--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,9 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title><%= (title = yield(:title)) ? title : "Insight" %></title>
+	<title><%= (title = yield(:title)) ? title : "SEO title" %></title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 	<meta name="language" content="en-us" />
-	<meta http-equiv="reply-to" content="info@commandc.com" />
-	<meta name="resource-type" content="document" />
-	<meta name="distribution" content="GLOBAL" />
-	<meta name="copyright" content="copyright Insight" />
 	<meta name="keywords" content="<%= yield :seo_keywords %>" />
 	<meta name="description" content="<%= yield :seo_description %>" />
 	<meta name="author" content="Command C, Custom Web Site Design, Website Design" />
