changes to main menu and admin menu

--- a/app/views/common/_main_menu.html.erb
+++ b/app/views/common/_main_menu.html.erb
@@ -1,8 +1,5 @@
-<% if authorized?(:admin) %>
-	Add new 
-	<%= link_to "Section", new_section_path, :class => "modal" %> |
-	<%= link_to "Page", new_section_page_path(@section), :class => "modal" %>
-<% end %>
-<ul id="mainmenu">
-	<%= render :partial => "common/main_menu_item", :collection => @root_sections, :as => :item, :locals => { :page => false } %>
-</ul>
+<div id="navigation">
+	<ul id="mainmenu">
+		<%= render :partial => "common/main_menu_item", :collection => get_menu_sections, :as => :item, :locals => { :page => false } %>
+	</ul>
+</div><!-- end 'navigation' -->
