--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New section</h1>
 
-<% form_for(@section) do |f| %>
+<% form_for(@section, :html => { :class => "ajax" }) do |f| %>
   <%= f.error_messages %>
 
   <%= render :partial => f %>
