--- a/app/views/common/_main_menu_item.html.erb
+++ b/app/views/common/_main_menu_item.html.erb
@@ -1,12 +1,20 @@
 <% content_tag_for(:li,item) do %>
 	<% if page %>
-		<%= link_to item.short_name, [section,item], :class => ( item == @page ? "current" : "notcurrent" ) %>
+		<% if item.published and !authorized? %>
+			<%= link_to item.short_name, [section,item], :class => ( item == @page ? " current" : " notcurrent" ) %>
+		<% elsif authorized? %>
+			<%= link_to item.short_name, [section,item], :class => ( item == @page ? " current" : " notcurrent" ) + " " + ( item.published ? "published" : "unpublished" ) %>
+		<% end %>
 	<% else %>
-		<%= link_to item.short_name, item, :class => ( item == @section ? "current" : "notcurrent" ) %>
+		<% if item.published and !authorized? %>
+			<%= link_to item.short_name, item, :class => ( item == @section ? " current" : " notcurrent" ) %>
+		<% elsif authorized? %>
+			<%= link_to item.short_name, item, :class => ( item == @section ? " current" : " notcurrent" ) + " " + ( item.published ? "published" : "unpublished" ) %>
+		<% end %>
 		<% unless item.children.blank? and item.pages.blank? %>
 			<% content_tag(:ul, :class => "level-#{item.ancestors.size}") do %>
-				<%= render :partial => "common/main_menu_item", :collection => item.pages, :as => :item, :locals => { :page => true, :section => item } %>
-				<%= render :partial => "common/main_menu_item", :collection => item.children, :as => :item, :locals => { :page => false } %>
+				<%= render :partial => "common/main_menu_item", :collection => ( authorized? ? item.pages : item.pages.find(:all, :conditions => { :published => true })), :as => :item, :locals => { :page => true, :section => item } %>
+				<%= render :partial => "common/main_menu_item", :collection => ( authorized? ? item.children : item.children.find(:all, :conditions => { :published => true})), :as => :item, :locals => { :page => false } %>
 			<% end %>
 		<% end %>
 	<% end %>
