--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -12,15 +12,17 @@
 <% end %>
 <% content_for :admin_toolbar do %>
 	<li><strong>Section:</strong></li>
-	<li><%= image_tag 'add.png', :size => "16x16" %><%= link_to "Add Section", new_section_path, :class => "modal update_navigation" %></li>
-	<li><%= image_tag("pencil.png", :size => "16x16", :alt => "Edit") %><%= link_to "Edit Section", edit_section_path(@section), :class => "modal update_navigation", :title => "Edit" %></li>
-	<li><%= image_tag("fail.png", :size => "16x16", :alt => "Delete") %><%= link_to "Delete Section", @section, :confirm => "Are you sure?", :method => "delete", :title => "Delete" %></li>
-	<li><%= image_tag 'add.png', :size => "16x16" %><%= link_to "Add Page", new_section_page_path(@section), :class => "modal update_navigation" %></li>
+	<% if authorized?(:admin) %>
+		<li><%= image_tag 'add.png', :size => "16x16" %><%= link_to "Add Section", new_section_path, :class => "modal update_navigation" %></li>
+		<li><%= image_tag("pencil.png", :size => "16x16", :alt => "Edit") %><%= link_to "Edit Section", edit_section_path(@section), :class => "modal update_navigation", :title => "Edit" %></li>
+		<li><%= image_tag("fail.png", :size => "16x16", :alt => "Delete") %><%= link_to "Delete Section", @section, :confirm => "Are you sure?", :method => "delete", :title => "Delete" %></li>
+	<% end %>
+	<li><%= image_tag 'add.png', :size => "16x16" %><%= link_to "Add Page to Section", new_section_page_path(@section), :class => "modal update_navigation" %></li>
 	<li><strong>Page:</strong></li>
-	<li><%= image_tag("pencil.png", :size => "16x16", :alt => "Edit") %><%= link_to "Edit Page", edit_section_page_path(@section,@page), :class => "modal update_content", :title => "Edit" %></li>
+	<li><%= image_tag("pencil.png", :size => "16x16", :alt => "Edit") %><%= link_to "Edit Page", edit_section_page_path(@section,@page), :class => "modal update_navigation", :title => "Edit" %></li>
 	<li><%= image_tag("fail.png", :size => "16x16", :alt => "Delete") %><%= link_to "Delete Page", [@section,@page], :confirm => "Are you sure?", :method => "delete", :title => "Delete" %></li>
 	<li><%= image_tag 'add.png', :size => "16x16" %><%= link_to 'Manage SEO', { :controller => 'seo_profiles', :action => 'index' }, :class => 'modal' %></li>
-	<li><%= image_tag("add.png", :size => "16x16", :alt => "New") %><%= link_to "Add Block", new_section_page_block_path(@section,@page), :class => "modal append_content", :title => "Edit" %></li>
+	<li><%= image_tag("add.png", :size => "16x16", :alt => "New") %><%= link_to "Add Block to Page", new_section_page_block_path(@section,@page), :class => "modal append_content", :title => "Edit" %></li>
 <% end %>
 <h3><%= @page.long_name %></h3>
 
