add some user mgmt stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 	<meta name="author" content="Command C, Custom Web Site Design, Website Design" />
 	<meta name="robots" content="index,follow" />
 	<link rel="shortcut icon" href="/favicon.ico" />
-	<%= stylesheet_link_tag 'screen', 'modal', 'custom-theme/jquery-ui' %>
+	<%= stylesheet_link_tag 'screen', 'blockhead', 'modal', 'custom-theme/jquery-ui' %>
 	<!--[if IE]>
 	<%= stylesheet_link_tag 'ie' %>
 	<![endif]-->
