--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,8 @@
 <h1 id="seo-heading1"><%= (heading = yield(:seo_heading1)) ? heading : "SEO heading" %></h1>
 <div id="container" class="<%= yield :container_class %>">
 	<div id="header" class="clearfix">
+		<%= render :partial => "common/logo" %>
+		<%= render :partial => "common/google_search" %>
 		<%= render :partial => "common/font_size_switcher" %>
 		<%= render :partial => "common/main_menu" %>
 	</div><!-- end 'header' -->
