--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -1,9 +1,9 @@
 <p>
-    <%= form.label :short_name %><br />
+    <%= form.label :short_name, "Text for menu link:" %><br />
     <%= form.text_field :short_name %>
   </p>
   <p>
-    <%= form.label :long_name %><br />
+    <%= form.label :long_name, "Full Title:" %><br />
     <%= form.text_field :long_name %>
   </p>
   <p>
