--- a/app/views/common/_menu_item.html.erb
+++ b/app/views/common/_menu_item.html.erb
@@ -1,5 +1,5 @@
 <% content_tag_for(:li,item) do %>
-	<% if page %>
+	<% if is_page %>
 		<% if item.published and !authorized? %>
 			<%= link_to item.short_name, [section,item], :class => ( item == @page ? " current" : " notcurrent" ) %>
 		<% elsif authorized? %>
@@ -13,8 +13,10 @@
 		<% end %>
 		<% unless item.children.blank? and item.pages.blank? %>
 			<% content_tag(:ul, :class => "level-#{item.ancestors.size}") do %>
-				<%= render :partial => "common/main_menu_item", :collection => ( authorized? ? item.pages : item.pages.find(:all, :order => :position, :conditions => { :published => true })), :as => :item, :locals => { :page => true, :section => item } %>
-				<%= render :partial => "common/main_menu_item", :collection => ( authorized? ? item.children : item.children.find(:all, :order => :position, :conditions => { :published => true})), :as => :item, :locals => { :page => false } %>
+				<% if show_pages %>
+					<%= render :partial => "common/menu_item", :collection => ( authorized? ? item.pages : item.pages.find(:all, :order => :position, :conditions => { :published => true })), :as => :item, :locals => { :is_page => true, :section => item, :show_pages => show_pages } %>
+				<% end %>
+				<%= render :partial => "common/menu_item", :collection => ( authorized? ? item.children : item.children.find(:all, :order => :position, :conditions => { :published => true})), :as => :item, :locals => { :is_page => false, :show_pages => show_pages } %>
 			<% end %>
 		<% end %>
 	<% end %>
