--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New page</h1>
 
-<% form_for([@section,@page], :html => { :class => "ajax" }) do |f| %>
+<% form_for([@section,@page]) do |f| %>
   <%= f.error_messages %>
 
   <%= render :partial => f %>
