--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -13,3 +13,7 @@
     <%= form.label :published %><br />
     <%= form.check_box :published, :checked => "checked" %>
   </p>
+	<p>
+    <%= form.label :display_title, "Display the title?:" %><br />
+    <%= form.check_box :display_title %>
+  </p>
