--- a/app/views/pages/_block.html.erb
+++ b/app/views/pages/_block.html.erb
@@ -23,7 +23,7 @@
 				<% end %>
 			<% end %>
 		</ul>
-	<% else %>
+	<% elsif block.display_title %>
 		<h4><%= block.long_name %></h4>
 	<% end %>
 
