uploaded image creates new content object

--- a/app/views/image_files/_form.html.erb
+++ b/app/views/image_files/_form.html.erb
@@ -14,7 +14,7 @@
   <%= form.label :link_url, "Link to URL?:" %><br />
   <%= form.text_field :link_url %>
 </p>
-<% if @image_file.new_record? %>
+<% if form.object.new_record? %>
 	<p>
     <%= form.label :image, "Upload a file:" %><br />
     <%= form.file_field :image %>
