--- a/public/stylesheets/blockhead.css
+++ b/public/stylesheets/blockhead.css
@@ -70,6 +70,13 @@ div#container {
 div#content {
 	position: relative;
 }
+div#sidebar {
+	float: left;
+	width: 150px;
+}
+.has-sidebar .block {
+	margin-left: 153px;
+}
 
 /*****************
 * Typography
