--- a/app/views/common/_menu_item.html.erb
+++ b/app/views/common/_menu_item.html.erb
@@ -15,7 +15,7 @@
 		<% unless item.children.blank? and item.pages.blank? %>
 			<% content_tag(:ul, :class => "level-#{item.ancestors.size}") do %>
 				<% if show_pages %>
-					<% authorized? ? collecton = item.pages : collection = item.pages.find(:all, :order => :position, :conditions => { :published => true }) %>
+					<% authorized? ? collection = item.pages : collection = item.pages.find(:all, :order => :position, :conditions => { :published => true }) %>
 					<%= render :partial => "common/menu_item", :collection => ( collection.size > 1 ? collection : {}), :as => :item, :locals => { :is_page => true, :section => item, :show_pages => show_pages } %>
 				<% end %>
 				<%= render :partial => "common/menu_item", :collection => ( authorized? ? item.children : item.children.find(:all, :order => :position, :conditions => { :published => true})), :as => :item, :locals => { :is_page => false, :show_pages => show_pages } %>
