--- a/app/views/common/_menu_item.html.erb
+++ b/app/views/common/_menu_item.html.erb
@@ -24,6 +24,7 @@
 					<% end %>
 					<%= render :partial => "common/menu_item", :collection => ( authorized? ? item.children : item.children.find(:all, :order => :position, :conditions => { :published => true})), :as => :item, :locals => { :is_page => false, :show_pages => show_pages } %>
 				<% end %>
+			<% end %>
 		<% end %>
 	<% end %>
 <% end %>
