added span to wrap menu item

--- a/app/views/common/_menu_item.html.erb
+++ b/app/views/common/_menu_item.html.erb
@@ -1,20 +1,18 @@
 <% menu_item_counter == 0 ? li_class = { :class => "first" } : li_class = {} %>
+<% item.short_name = "<span>" + item.short_name + "</span>" %>
 <% content_tag_for(:li,item, li_class) do %>
-	<span>
 	<% if is_page %>
 		<% if item.published and !authorized? %>
 			<%= link_to item.short_name, [section,item], :class => ( item == @page ? " current" : " notcurrent" ) %>
 		<% elsif authorized? %>
 			<%= link_to item.short_name, [section,item], :class => ( item == @page ? " current" : " notcurrent" ) + " " + ( item.published ? "published" : "unpublished" ) %>
 		<% end %>
-		</span>
 	<% else %>
 		<% if item.published and !authorized? %>
 			<%= link_to item.short_name, item, :class => ( item == @section ? " current" : " notcurrent" ) %>
 		<% elsif authorized? %>
 			<%= link_to item.short_name, item, :class => ( item == @section ? " current" : " notcurrent" ) + " " + ( item.published ? "published" : "unpublished" ) %>
 		<% end %>
-		</span>
 		<% unless item.children.blank? and item.pages.blank? %>
 			<% authorized? ? collection = item.pages : collection = item.pages.find(:all, :order => :position, :conditions => { :published => true }) %>
 			<% unless item.children.blank? and collection.size <= 1 %>
