added ajax pagination to contents browser and image_files browser

--- a/app/views/image_files/_form.html.erb
+++ b/app/views/image_files/_form.html.erb
@@ -21,7 +21,7 @@
   </p>
 <% else %>
 	<p>
-		Current image: <%= image_tag @image_file.image.url(:small) %>
+		Current image: <%= image_tag form.object.image.url(:small) %>
 	</p>
 	<p>
 		<%= form.label :image, "Replace with:" %><br />
