--- a/app/views/common/_menu_item.html.erb
+++ b/app/views/common/_menu_item.html.erb
@@ -2,15 +2,15 @@
 <% content_tag_for(:li,item, li_class) do %>
 	<% if is_page %>
 		<% if item.published and !authorized? %>
-			<%= link_to item.short_name, [section,item], :class => ( item == @page ? " current" : " notcurrent" ) %>
+			<%= link_to item.short_name, [section,item], :class => ( item == @page ? "current" : "notcurrent" ) %>
 		<% elsif authorized? %>
-			<%= link_to item.short_name, [section,item], :class => ( item == @page ? " current" : " notcurrent" ) + " " + ( item.published ? "published" : "unpublished" ) %>
+			<%= link_to item.short_name, [section,item], :class => ( item == @page ? "current" : "notcurrent" ) + " " + ( item.published ? "published" : "unpublished" ) %>
 		<% end %>
 	<% else %>
 		<% if item.published and !authorized? %>
-			<%= link_to item.short_name, item, :class => ( item == @section || item.ancestors.include?(@section) ? " current" : " notcurrent" ) %>
+			<%= link_to item.short_name, item, :class => ( item == @section || @section.ancestors.include?(item) ? "current" : "notcurrent" ) %>
 		<% elsif authorized? %>
-			<%= link_to item.short_name, item, :class => ( item == @section || item.ancestors.include?(@section) ? " current" : " notcurrent" ) + " " + ( item.published ? "published" : "unpublished" ) %>
+			<%= link_to item.short_name, item, :class => ( item == @section || @section.ancestors.include?(item) ? "current" : "notcurrent" ) + " " + ( item.published ? "published" : "unpublished" ) %>
 		<% end %>
 		<% unless item.children.blank? and item.pages.blank? %>
 			<% authorized? ? collection = item.pages : collection = item.pages.find(:all, :order => :position, :conditions => { :published => true }) %>
