add parent section name to body class

--- a/app/views/image_files/insert.html.erb
+++ b/app/views/image_files/insert.html.erb
@@ -36,6 +36,8 @@
 		<%= label_tag "image_size", "Thumb:" %>
 		<%= radio_button_tag "image_size", "thumb" %>
 		<%= hidden_field_tag "image_url_thumb", @image_file.image.url(:thumb) %>
+		<%= radio_button_tag "image_size", "original" %>
+		<%= hidden_field_tag "image_url_thumb", @image_file.image.url %>
 	</p>
 	<p id="image_align_container">
 		<%= label_tag "image_align", "Alignment:" %><br />
