--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -7,6 +7,7 @@
 <% end %>
 <% content_for :body_class do %>
 	<%= "admin-mode" if authorized? %>
+	<%= @section_root.short_name.parameterize unless @section_root == @section %>
 	<%= @section.short_name.parameterize %>
 	<%= @page.short_name.parameterize %>
 <% end %>
