--- a/app/views/common/_menu_item.html.erb
+++ b/app/views/common/_menu_item.html.erb
@@ -19,7 +19,7 @@
 					<% if show_pages and collection.size > 1 %>
 						<%= render :partial => "common/menu_item", :collection => collection, :as => :item, :locals => { :is_page => true, :section => item, :show_pages => show_pages } %>
 					<% end %>
-					<%= render :partial => "common/menu_item", :collection => ( authorized? ? item.children : item.children.find(:all, :order => :position, :conditions => { :published => true})), :as => :item, :locals => { :is_page => false, :show_pages => show_pages } %>
+					<%= render :partial => "common/menu_item", :collection => ( authorized? ? item.children : item.children.find(:all, :order => :position, :conditions => { :published => true})), :as => :item, :locals => { :is_page => false, :show_pages => ( item == @section ? show_pages : false) } %>
 				<% end %>
 			<% end %>
 		<% end %>
