debugging tabbed nested blocks

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -39,7 +39,7 @@
 	<h3 class="heading myriadpro"><%= @page.long_name %></h3>
 <% end %>
 
-<%= render :partial => "pages/block", :collection => @page.blocks.roots, :as => :block %>
+<%= render :partial => "pages/block", :collection => @page.blocks.roots %>
 
 </div><!-- end 'main' -->
 
