--- a/app/views/pages/_block.html.erb
+++ b/app/views/pages/_block.html.erb
@@ -1,5 +1,5 @@
-<% block.css_classes += " nested_block_tabs" if block.nested_blocks_as_tabs? # Add class for tabs %>
-<% if block.parent.blank? then update_block = block else update_block = block.parent end # Set block for AJAX updating %>
+<% block.nested_blocks_as_tabs? ? block.css_classes += " nested_block_tabs" : false # Add class for tabs %>
+<% block.parent.blank? ? update_block = block : update_block = block.parent # Set block for AJAX updating %>
 <% div_for block, :class => (dom_id(block) + " " + block.css_classes).rstrip do %>
 	<% if authorized?(:admin) %>
 		<div class="admin-links" style="display: none;">
@@ -8,7 +8,9 @@
 			<%= link_to image_tag("pencil.png", :size => "16x16", :alt => "Edit"), edit_section_page_block_path(@section,@page,block), :class => "modal update_block_#{update_block.id}", :title => "Edit" %>
 			<%= link_to image_tag("fail.png", :size => "16x16", :alt => "Delete"), [@section,@page,block], :class => "ajax-delete", :title => "Delete" %>
 			<% unless block.parent.blank? %>
-				<%= image_tag("drag_handle.png", :size => "16x16", :alt => "Delete", :class => "block_drag_handle") unless block.parent.nested_blocks_as_tabs? %>
+				<% unless block.parent.nested_blocks_as_tabs? %>
+					<%= image_tag("drag_handle.png", :size => "16x16", :alt => "Delete", :class => "block_drag_handle") %>
+				<% end %>
 			<% else %>
 				<%= image_tag("drag_handle.png", :size => "16x16", :alt => "Delete", :class => "block_drag_handle") %>
 			<% end %>	
@@ -27,10 +29,10 @@
 		<h4><%= block.long_name %></h4>
 	<% end %>
 
-	<%= render :partial => "blocks/content", :collection => block.contents, :as => :content, :locals => { :parent_block => block } %>
+	<%= render :partial => "blocks/content", :collection => block.contents, :locals => { :parent_block => block } %>
 	
 	<% if block.children.size > 0 %>
-		<%= render :partial => "pages/block", :collection => block.children, :as => :block %>
+		<%= render :partial => "pages/block", :collection => block.children %>
 	<% end %>
 
 	<%= render :partial => "common/scroll_buttons" %>
