--- a/app/views/copy_texts/_form.html.erb
+++ b/app/views/copy_texts/_form.html.erb
@@ -3,3 +3,8 @@
    <%= form.label :output, "Text  (uses <a href=\"http://www.textism.com/tools/textile/\" target=\"_blank\">Textile</a>):" %><br />
    <%= form.text_area :output %>
  </p>
+<% if authorized?(:admin) %>
+	<p>
+	   <%= form.label :is_html, "Use HTML instead of Textile?:" %><br />
+	   <%= form.check_box :is_html %>
+	</p>
