added QuoteList model

--- a/app/views/copy_texts/_form.html.erb
+++ b/app/views/copy_texts/_form.html.erb
@@ -5,7 +5,7 @@
  </p>
 <% if authorized?(:admin) %>
 	<p>
-	   <%= form.label :is_html, "Use HTML instead of Textile?:" %><br />
+	   <%= form.label :is_html, "Use HTML instead of Textile?:" %>
 	   <%= form.check_box :is_html %>
 	</p>
 <% end %>
