--- a/app/views/seo_profiles/index.html.erb
+++ b/app/views/seo_profiles/index.html.erb
@@ -1,11 +1,8 @@
 <h1>Listing SEO Profiles</h1>
 <ul id="seo-profile-list">
 <% for seo_profile in @seo_profiles %>
-	<% content_tag_for(:li, seo_profile) do %>
-		<%= link_to image_tag('fail.png', :size => "16x16", :alt => "Delete SEO Profile"), seo_profile, :title => "Delete", :class => "ajax-delete" %>
-		<%= link_to seo_profile.name, edit_seo_profile_path(seo_profile), :class => "modal-new-window" %>
-	<% end %>
+	<%= render :partial => 'seo_profile', :locals => { :seo_profile => seo_profile } %>
 <% end %>
+</ul>
 
-
-<%= link_to 'New SEO Profile', new_seo_profile_path, :class => "modal-new-window" %>
+<%= link_to 'New SEO Profile', new_seo_profile_path, :class => "modal-new-window append_seo-profile-list" %>
