--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Edit My Account</h1>
+<h1>Edit Account</h1>
  
-<% form_for @user, :url => account_path, :html => { :class => "ajax" } do |f| %>
+<% form_for @user, :html => { :class => ((params[:edit_self] == "true" || @user.edit_self == "true") ? "ajax" : "ajax modal2") } do |f| %>
   <%= f.error_messages %>
   <%= render :partial => "form", :object => f %>
   <%= f.submit "Update" %>
