--- a/app/views/common/_google_search.html.erb
+++ b/app/views/common/_google_search.html.erb
@@ -1,5 +1,6 @@
 <div id="search">
 	<% form_tag "http://google.com", :method => :get do %>
+		<%= link_to "Sitemap", sitemap_path %> | Search
 		<%= text_field_tag 'search' %>
 		<%= image_submit_tag 'search_submit.png' %>
 	<% end %>
